Fixed pricing alignment

--- a/src/components/landing/Pricing/Pricing.module.scss
+++ b/src/components/landing/Pricing/Pricing.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: center;
   column-gap: 1rem;
   width: 1120px;
 }
